--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "normalize.css": "^5.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.0",
     "browser-sync": "^2.18.8",
     "browser-sync-webpack-plugin": "^1.1.4",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "beta",
-    "node-sass": "^4.5.0",
-    "postcss-loader": "^1.3.1",
-    "sass-loader": "^6.0.1",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.1",
+    "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.3",
     "snazzy": "^6.0.0",
-    "standard": "^8.6.0",
-    "webpack": "^2.2.1"
+    "standard": "^9.0.2",
+    "webpack": "^2.3.2"
   }
 }
